2025.369: v3.2.2
  - Allow mseh_set_ptr_r() to create extra headers when none exist for a merge patch
  using the root pointer ("").  Pointers to non-root locations still must exist.

2025.354: v3.2.1
  - Rename ms3_mstl_init_fd() to ms3_msfp_init_fd() and add backward compatibility.
  - Add -fPIC to the build options for the static library target.
  - Update internal selection matching to support `!` in addition to `^` for
  character class negation and handle edge cases more robustly.
  - Avoid modifying record buffer during v3 CRC check and add CRC validation to testing.
  - Add v3 parsing test for ensuring header-indicated lengths are sane.
  - Small fixes of logic errors and increased portability.
  - Add GitHub action to build and test on multiple platforms.
  - Fix Windows symbol issues and CMake configuration.

2025.315: v3.2.0
  - Add generator-style packing interfaces for MS3Record and MS3TraceList.
  Specifically msr3_pack_init(), msr_pack_next(), msr_pack_free() and
  mstl3_pack_init(), mstl3_pack_next(), mstl_pack_free().
  - Fix mstl3_pack_ppupdate_flushidle() logic to flush only idle streams.
  - Fix memory leak in mseh_replace().
  - Addition of a CMake build system contributed by @lsawade, thank you!

2025.303: v3.1.11
  - Fix byte swapping in ms3_detect() for v3 records for big-endian systems.
  - Add MSF_SKIPADJACENTDUPLICATES to skip adjacent duplicate records while
  populating a MS3TraceList.

2025.298: v3.1.10
  - Add MSF_SPLITISVERSION flag to control using the splitversion value as the
  version instead the record publication version for mstl3_addmsr() and variants.
  - Add missing functions to libmseed.def for Windows library exports.

2025.267: v3.1.9
  - Add mstl3_pack_ppupdate_flushidle() for packing idle streams in combination
  with the use of MSF_PPUPDATETIME during trace list additions.
  - Convert mstl3_addmsr() from a macro to a real (thin) function.

2025.257: v3.1.8
  - Fix segment removal from MS3TraceList when packing
